<resources>
    <string name="app_name">Telegram Backupper</string>
    <string name="bot_api_key_hilt_text">Bot api key</string>
    <string name="channel_id_hilt_text">Chat id</string>
    <string name="authorization_label_text">Authorization</string>
    <string name="sign_up_button_text">Sign up</string>
    <string name="start_sync_button_text">Start sync</string>
    <string name="text_for_telegram_authorization">authorization success!!!</string>
    <string name="text_for_failed_authorization">Authorization failed, verify your credentials and try again</string>
    <string name="text_for_invalid_credentials">All fields must be filled</string>
    <string name="delete_button_text">Completely clear the telegram channel</string>
    <string name="photos_switcher_text">Photos</string>
    <string name="videos_switcher_text">Videos</string>
    <string name="image_backup_notification_channel_name">Image backup notification</string>
    <string name="video_backup_notification_channel_name">Video backup notification</string>
    <string name="delete_backup_notification_channel_name">Delete backup notification</string>
    <string name="image_backup_notification_title">Image backup</string>
    <string name="video_backup_notification_title">Video backup</string>
    <string name="delete_backup_notification_title">Delete backup</string>
    <string name="backup_notification_body">Performing a data backup</string>
    <string name="delete_backup_notification_body">Performing a data cleaning</string>
</resources>